# GCLog

./: .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml
.github/workflows/: test.yml
gclog/: gclog.py
tests/: __init__.py  conftest.py  test_gcp_logger.py
