[project]
name = "gcp-logger"
version = "0.1.0"
description = "Lightweight, production-ready logging package for Google Cloud Platform applications"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "codecov>=2.1.13",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=gcp_logger --cov-report=term-missing --cov-report=xml"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["gcp_logger"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
